dark mode flash bug fixed

--- a/themes/geeky-hugo/assets/scss/dark.scss
+++ b/themes/geeky-hugo/assets/scss/dark.scss
@@ -1,6 +1,9 @@
-body.dark-mode {
-  background: rgb(45, 45, 45);
-  color: #e0e0e0;
+html.theme-selection.dark {
+
+  body {
+    background: rgb(45, 45, 45);
+    color: #e0e0e0;
+  }
 
   .header .dropdown-menu {
     background: rgb(58, 58, 58);
@@ -32,14 +35,15 @@ body.dark-mode {
   .pagination .page-link,
   .social-icons li a,
   a,
-  .card-meta li a  {
+  .card-meta li a {
     color: #e0e0e0 !important;
   }
 
-.content blockquote {
-  border: 2px dashed #555;
-  background-color: transparent;
-}
+  .content blockquote {
+    border: 2px dashed #555;
+    background-color: transparent;
+  }
+
   .border-default,
   .border,
   .widget,
@@ -67,7 +71,8 @@ body.dark-mode {
     color: #999;
   }
 
-  code, .fa-moon {
+  code,
+  .fa-moon {
     color: #008ad7
   }
 
@@ -78,20 +83,21 @@ body.dark-mode {
   .page-item.disabled .page-link {
     display: none;
   }
-  
+
   .pagination {
 
     .prev,
     .next {
       a {
         padding: 12px 10px;
-  
+
         &:hover {
           background-color: #008ad7;
         }
       }
     }
   }
+
   /*
 * Chroma PowerShell Console Style v1.0
 * 
